# ledgerwell

./: .gitignore  LICENSE  README.md  ROADMAP.md  index.html  package-lock.json  package.json
docs/: ARCHITECTURE.md  MIGRATION.md  PHASE3-APPLY.md
sample-data/: checking-export.csv  credit-export.csv
src/: backup.js  engine.js  investments.js  price-provider.js  storage.js  ui.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: ledger.toml
src-tauri/src/: main.rs
test/: charts.test.js  engine.test.js
www/: index.html
www/src/: backup.js  charts.js  engine.js  import.js  investments.js  price-bulk.js  price-fetch.js  price-provider.js  price-splits.js  price-store.js  storage.js  styles.css  ui.js
