[package]
name = "ledgerwell"
version = "0.1.0"
description = "A light, Quicken-style personal finance app on a double-entry ledger."
authors = ["LedgerWell Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.0.3", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2"
ureq = "2"
zip = "2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
